--- a/resume/index.html
+++ b/resume/index.html
@@ -76,11 +76,10 @@ li {margin: .4em 0;}
 	
 
 <ul>
-<li>Redesign the Law School’s 2,500-page web site.</li> 
-<li>Optimize and updated MODX (CMS) templates, HTML, CSS and JavaScript to speed up performance.</li> 
-<li>Create responsive design to provide an optimal viewing experience across devices.</li> 
-<li>Lead the role of server administration. Run and secure Linux web servers.</li> 
-<li>Plan, structure, and implement WordPress Multisite to provide easy-to-update CMS to faculty, students, and staff.</li> 
+	<li>In charge of the Law School’s user experience design, front-end development, content management system, and server administration.</li>
+	<li>Lead the complete redesign of the Law School’s web presence: rewrite HTML, CSS, and JavaScript to improve performance and create responsive layout to provide an optimal experience across multiple devices.</li>
+	<li>Implement and manage WordPress Multisite to provide faculty, students, and the Law School’s members an easy-to-use online platform.</li>
+	<li>Oversee system administration: update and secure Linux web servers.</li>
 </ul>
 </section>
 
@@ -95,9 +94,8 @@ li {margin: .4em 0;}
 	<div class="location">Fairfax, VA</div>
 	
 <ul>
-<li>Provide digital products and services centered in the user experience to small businesses and non-profit organizations. </li>
-<li>Offer full web solutions including brand design, user experience, front-end development, and content management integration.</li>
-<li>Work directly with clients from start to finish and manage ongoing relationships.</li>
+	<li>Offer full web solution: user experience design, content strategy, front-end development, and content management system implementation.</li>
+	<li>Work directly with clients from project kickoff to launch and maintain ongoing supports.</li>
 </ul>
 
 </section>
@@ -110,10 +108,9 @@ li {margin: .4em 0;}
 	<div class="location">Washington, DC</div>
 	
 <ul>
-<!--<li>Researched, designed and launched the online version of <cite>GWbusiness</cite> magazine.</li>-->
-<li>Created the responsive design experience and maximized the distribution of the print publication.</li>
-<li>Planned and implemented easy-to-publish news system and integrated new media marketing efforts into the school’s overall strategy.</li> 
-<li>Contributed in unifying web presence to ensure GW’s established brand.</li>
+	<li>In charged of the Business School’s user experience design, content strategy, front-end development, and unify web presence to ensure GW’s established brand.</il>
+	<li>Researched and designed the responsive digital version of the school’s printed magazine.</li>
+	<li>Customized and managed WordPress as an easy-to-publish news system to integrate new media marketing efforts into the school’s overall strategy.</li>
 </ul>
 
 </section>
@@ -123,13 +120,12 @@ li {margin: .4em 0;}
 	<h3>Senior Web Designer</h3>
 	<h4><a href="http://www.vassar.edu">Vassar College</a></h4>
 	<time>August 2002 – January 2008</time>
-	<div class="location">Washington, DC</div>
+	<div class="location">Poughkeepsie, NY</div>
 	
 
 <ul>
-<li>Contributed in enhancing the online experience of Vassar’s established brand.</li>
-<li>Designed and developed web sites that catered to the specific needs of each department and its users.</li>
-<li>Collaborated with a team of talented designers and developers to maintain more than 200 web sites.</li>
+	<li>Designed and developed unique web experience to meet the specific needs of each academic department and its users.</li>
+	<li>Contributed in enhancing the online experience of Vassar’s established brand and collaborated with a team of talented designers and developers to maintain over 200 web sites.</li>
 </ul>
 
 </section>
@@ -151,7 +147,7 @@ li {margin: .4em 0;}
 	<div class="location">Fairfax, VA</div>
 	
 <ul>
-<li>Instruct courses in web design and usability to advanced BFA and MA graduate students.</li> 
+<li>Teach courses in advanced web design and usability to upper undergraduate and graduate students.</li> 
 </ul>
 </section>
 
