--- a/resume/index.html
+++ b/resume/index.html
@@ -109,7 +109,7 @@ li {margin: .4em 0;}
 	
 <ul>
 	<li>In charged of the Business School’s user experience design, content strategy, front-end development, and unify web presence to ensure GW’s established brand.</il>
-	<li>Researched and designed the responsive digital version of the school’s printed magazine.</li>
+	<li>Designed and published the responsive digital version of the school’s printed magazine.</li>
 	<li>Customized and managed WordPress as an easy-to-publish news system to integrate new media marketing efforts into the school’s overall strategy.</li>
 </ul>
 
