Changed drop cap
Updated drop cap

--- a/editorial/index.html
+++ b/editorial/index.html
@@ -61,15 +61,15 @@
 		ul, ol {margin: 0; padding: 0; font-size: 0.750em;}
 		
 		
-		p:first-of-type:first-letter {
-	font-size: 7.5em;
-	padding:0 .05em 0 0;
-	margin: 0;
+	p:first-of-type:first-letter {
+	font-size: 5.5em;
+	padding:.02em .05em 0 0;
+	margin:  0;
 	float: left;
-	line-height: .95;
-	font-weight:700;
+	line-height: .84;
+	font-weight:400;
 	color: #00BCB4;
-	font-family: 'Oswald', sans-serif;
+	
 		}	
 		
 		
