--- a/portfolio/work/index.html
+++ b/portfolio/work/index.html
@@ -41,7 +41,7 @@
 <p>Vietjazz is a recording company I created for a branding class. The concept was to connect Vietnamese ballad with jazz. I designed the logo, stationery and applications. I also developed a responsive web site for the brand guidelines.</p>
 
 
-<a href="http://sketchesofmiles.com/app-prototype/">
+<a href="http://visualgui.com/sketchesofmiles/app-prototype/#/">
 <h3>Sketches of Miles</h3>
 <img src="../img/miles-app.svg" alt="Sketches of Miles">
 </a>
