--- a/editorial/index.html
+++ b/editorial/index.html
@@ -75,13 +75,15 @@
 		
 		
 		
-		@media only screen and (min-width: 42em) {	
-		section {max-width: 42em;}
+		@media only screen and (min-width: 38em) {	
+		section {max-width: 38em;}
 		
+		body {font-size: 131.3%;}
+	    header {font-size: 160%;}
 		
-	    header {font-size: 200%;}
-		
-		
+		p:first-of-type:first-letter {
+	font-size: 10em;
+	padding:.08em .05em 0 0;
 
 
 			}
