--- a/resume/index.html
+++ b/resume/index.html
@@ -6,11 +6,9 @@
 <title>Donny Truong’s Resume</title>
 <meta name="author" content="donny truong" />
 <meta name="copyright" content="visualgui.com" />
-<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Source+Serif+Pro:400,700' rel='stylesheet' type='text/css'>
-<style>
-body { background: #fff; color:#444; font: 100%/1.4 "Source Serif Pro", Georgia, "Times New Roman", Times, serif; text-align: left;  padding: 2em; font-weight: 400; margin: auto;  font-variant-ligatures: common-ligatures;}
-h1, h2, h3 {font-family: "Source Sans Pro",  "Helvetica Neue", Helvetica , Arial, sans-serif;   }
-h1{font-size:2.5em;  margin:.5em 0 0 0; line-height:1; padding-bottom: .2em; font-weight: 700; text-transform: uppercase;} 
+<link href='http://fonts.googleapis.com/css?family=Old+Standard+TT:400,400italic,700' rel='stylesheet' type='text/css'><style>
+body { background: #fff; color:#444; font: 100%/1.4 'Old Standard TT', serif;, Georgia, 'Times New Roman', Times, serif; text-align: left;  padding: 2em; font-weight: 400; margin: auto;  font-variant-ligatures: common-ligatures;}
+h1{font-size:4em;  margin:.5em 0 0 0; line-height:1; padding-bottom: .2em; font-weight: 700; } 
 h2 {font-size:1.8em; line-height:1;  padding:0; margin: 0; color:#999; font-weight: 400;} 
 h3 {font-size:1.4em; padding:0; margin:.5em 0 0 0; line-height:1.2; font-weight: 700;}
 h4 {font-size:1.2em; padding:0; margin:.3em 0 .5em 0; line-height:1.2; font-weight: 400;}
@@ -20,18 +18,18 @@ section {margin-bottom: 2em;}
 ul { list-style:none; list-style-image: none; margin: 0; padding: 0; }
 li {margin: .6em 0;}
 header li {margin: 0; color: #999;}
-a:link { color:#000; text-decoration:none; }
-a:visited { color: #000; }
+a:link { color:#DF3651; text-decoration:none; }
+a:visited { color: #DF3651; }
 a:hover { color: #000; }
 a:focus { outline: thin dotted; }
 a:hover, a:active { outline: 0; }
-[role="complementary"] {font-size: 87.5%}
+[role="complementary"] {font-size: 87.5% /*14px*/;}
 
 @media only screen and (min-width: 45em) {
-body {max-width:58.75em;}	
+body {max-width:58.75em /*940px*/;}	
 [role="banner"], .wrap {width: 100%;} 
-[role="main"] {width: 66%; float: left;}
-[role="complementary"] {width: 23.5%; float: right;}
+[role="main"] {float: left; width: 66% /*620px*/;}
+[role="complementary"] {float: right; width: 32% /*300px*/; }
 }
 
 </style>
@@ -44,7 +42,7 @@ body {max-width:58.75em;}
 	 <h1>Donny Truong</h1>
 	 <section>
   <ul>
-      <li>Web: <a href="http://www.visualgui.com">visualgui.com</a></li>
+      <li>Web: <a href="https://www.visualgui.com">visualgui.com</a></li>
   <li>Phone: <a href="tel:8453372187">845-337-2187</a></li>
   <li>Email: <a href="mailto:donny@visualgui.com">donny@visualgui.com</a></li>
 </ul>
@@ -61,7 +59,7 @@ body {max-width:58.75em;}
 
 <section>
 	<h3>Senior Web Services Developer</h3>
-	<h4><a href="http://www.law.gmu.edu">George Mason University School of Law</a></h4>
+	<h4><a href="http://www.law.gmu.edu">The George Mason University School of Law</a></h4>
 	<time>October 2011 – Present</time>
 	<div class="location">Arlington, VA</div>
 	
@@ -94,7 +92,7 @@ body {max-width:58.75em;}
 
 <section>
 	<h3>Senior Web Developer</h3>
-	<h4><a href="http://business.gwu.edu">George Washington University School of Business</a></h4>
+	<h4><a href="http://business.gwu.edu">The George Washington University School of Business</a></h4>
 	<time>January 2008 – October 2011</time>
 	<div class="location">Washington, DC</div>
 	
@@ -127,6 +125,17 @@ body {max-width:58.75em;}
   
   
 <aside role="complementary">
+	
+	
+	<h2>Publication</h2>
+	<section>
+		<ul>
+		<li><cite><a href="http://www.gmu.edu">Professional Web Typography</a></cite> (2015)</li>
+		<li><a href="http://visualgui.github.io/prowebtype/editorial/">“Web Typography: a Brief History”</a> (2014)</li>
+		<li><a href="http://visualgui.github.io/prowebtype/text-wrap/">“Designing With Miles”</a> (2013)</li>
+	</ul>
+	</section>
+	
 	
 	
 	<h2>Academics</h2>
@@ -163,11 +172,11 @@ body {max-width:58.75em;}
 <h2>Skills</h2>
 <section>
 <ul>
-<li><strong>Web Design:</strong> web standards, accessibility, usability, typography & UX design</li>
-<li><strong>Mobile:</strong>  responsive web design, jQuery Mobile development & UI design</li>
-<li><strong>Web Development:</strong>  HTML, CSS, Sass, JavaScript, PHP, MySQL, WordPress & MODX</li>
-<li><strong>Adobe:</strong> Photoshop, Illustrator, InDesign & Flash</li>
-<li><strong>Server Administration:</strong>  Linux (Red Hat & CentOS), Apache & command lines</li>
+<li><em>Web Design:</em> web standards, accessibility, usability, typography & UX design</li>
+<li><em>Mobile:</em>  responsive web design, jQuery Mobile development & UI design</li>
+<li><em>Web Development:</em>  HTML, CSS, Sass, JavaScript, PHP, MySQL, WordPress & MODX</li>
+<li><em>Adobe:</em> Photoshop, Illustrator, InDesign & Flash</li>
+<li><em>Server Administration:</em>  Linux (Red Hat & CentOS), Apache & command lines</li>
 </ul>
 </section>
 
