--- a/resume/index.html
+++ b/resume/index.html
@@ -6,13 +6,15 @@
 <title>Donny Truong’s Resume</title>
 <meta name="author" content="donny truong" />
 <meta name="copyright" content="visualgui.com" />
-<link href='http://fonts.googleapis.com/css?family=Old+Standard+TT:400,400italic,700' rel='stylesheet' type='text/css'><style>
-body { background: #fff; color:#444; font: 100%/1.4 'Old Standard TT', serif;, Georgia, 'Times New Roman', Times, serif; text-align: left;  padding: 2em; font-weight: 400; margin: auto;  font-variant-ligatures: common-ligatures;}
-h1{font-size:4em;  margin:.5em 0 0 0; line-height:1; padding-bottom: .2em; font-weight: 700; } 
-h2 {font-size:1.8em; line-height:1;  padding:0; margin: 0; color:#999; font-weight: 400;} 
-h3 {font-size:1.4em; padding:0; margin:.5em 0 0 0; line-height:1.2; font-weight: 700;}
-h4 {font-size:1.2em; padding:0; margin:.3em 0 .5em 0; line-height:1.2; font-weight: 400;}
-time, .location {color: #999; display: inline;}
+<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic|Source+Serif+Pro:700,400' rel='stylesheet' type='text/css'>
+<style>
+body { background: #fff; color:#444; font: 100%/1.4 'Source Serif Pro', Georgia, 'Times New Roman', Times, serif; text-align: left;  padding: 2em; font-weight: 400; margin: auto;  font-variant-ligatures: common-ligatures;}
+h1{font-size:4em;  margin:.5em 0 0 0; line-height:1; padding-bottom: .2em; font-weight: 700; font-family: 'Source Serif Pro', Georgia, 'Times New Roman', Times, serif;} 
+h2 {font-size:1.8em; line-height:1;  padding:0; margin: 0; color:#999; font-weight: 400; font-family: 'Source Sans Pro', sans-serif;} 
+h3 {font-size:1.4em; padding:0; margin:.5em 0 0 0; line-height:1.2; font-weight: 700; font-family: 'Source Serif Pro', Georgia, 'Times New Roman', Times, serif;}
+h4 {font-size:1.2em; padding:0; margin:.3em 0 .5em 0; line-height:1.2; font-weight: 400; font-family: 'Source Sans Pro', sans-serif;}
+time, .location {color: #999; display: inline; font-family: 'Source Sans Pro', sans-serif;}
+.contact {font-family: 'Source Sans Pro', sans-serif;}
 time {  border-right: 1px solid #f1f1f1; margin-right: .5em; padding-right: .5em; }
 section {margin-bottom: 2em;}
 ul { list-style:none; list-style-image: none; margin: 0; padding: 0; }
@@ -23,7 +25,7 @@ a:visited { color: #DF3651; }
 a:hover { color: #000; }
 a:focus { outline: thin dotted; }
 a:hover, a:active { outline: 0; }
-[role="complementary"] {font-size: 87.5% /*14px*/;}
+[role="complementary"] {font-size: 87.5% /*14px*/; font-family: 'Source Sans Pro', sans-serif;}
 
 @media only screen and (min-width: 45em) {
 body {max-width:58.75em /*940px*/;}	
@@ -40,7 +42,7 @@ body {max-width:58.75em /*940px*/;}
   <header role="banner">
 	  
 	 <h1>Donny Truong</h1>
-	 <section>
+	 <section class="contact">
   <ul>
       <li>Web: <a href="https://www.visualgui.com">visualgui.com</a></li>
   <li>Phone: <a href="tel:8453372187">845-337-2187</a></li>
