--- a/resume/index.html
+++ b/resume/index.html
@@ -8,13 +8,17 @@
 <meta name="copyright" content="visualgui.com" />
 <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic|Source+Serif+Pro:700,400' rel='stylesheet' type='text/css'>
 <style>
-body { background: #fff; color:#444; font: 100%/1.4 'Source Serif Pro', Georgia, 'Times New Roman', Times, serif; text-align: left;  padding: 2em; font-weight: 400; margin: auto;  font-variant-ligatures: common-ligatures;}
-h1{font-size:4em;  margin:.5em 0 0 0; line-height:1; padding-bottom: .2em; font-weight: 700; font-family: 'Source Serif Pro', Georgia, 'Times New Roman', Times, serif;} 
-h2 {font-size:1.8em; line-height:1;  padding:0; margin: 0; color:#999; font-weight: 400; font-family: 'Source Sans Pro', sans-serif;} 
-h3 {font-size:1.4em; padding:0; margin:.5em 0 0 0; line-height:1.2; font-weight: 700; font-family: 'Source Serif Pro', Georgia, 'Times New Roman', Times, serif;}
-h4 {font-size:1.2em; padding:0; margin:.3em 0 .5em 0; line-height:1.2; font-weight: 400; font-family: 'Source Sans Pro', sans-serif;}
-time, .location {color: #999; display: inline; font-family: 'Source Sans Pro', sans-serif;}
-.contact {font-family: 'Source Sans Pro', sans-serif;}
+
+body, h1, h3 {font-family: 'Source Serif Pro', Georgia, 'Times New Roman', Times, serif;}
+h2, h4, time, .location, .contact, [role="complementary"] {font-family: 'Source Sans Pro', 'Helvetica Neue', Helvetica , Arial, sans-serif;}
+
+body { background: #fff; color:#444; font-size: 100%; font-variant-ligatures: common-ligatures; font-weight: 400; line-height:1.4; margin: auto; padding: 2em;  text-align: left;}
+h1 {font-size:4em;  margin:.5em 0 0 0; line-height:1; padding-bottom: .2em; font-weight: 700; } 
+h2 {font-size:1.3em; line-height:1;  padding:0; margin: 0; color:#999; font-weight: 400; text-transform: uppercase; letter-spacing: .05em;} 
+h3 {font-size:1.6em; padding:0; margin:.5em 0 0 0; line-height:1.2; font-weight: 700; }
+h4 {font-size:1.2em; padding:0; margin:.3em 0 .5em 0; line-height:1.2; font-weight: 400;}
+time, .location {color: #999; display: inline;}
+
 time {  border-right: 1px solid #f1f1f1; margin-right: .5em; padding-right: .5em; }
 section {margin-bottom: 2em;}
 ul { list-style:none; list-style-image: none; margin: 0; padding: 0; }
@@ -25,7 +29,7 @@ a:visited { color: #DF3651; }
 a:hover { color: #000; }
 a:focus { outline: thin dotted; }
 a:hover, a:active { outline: 0; }
-[role="complementary"] {font-size: 87.5% /*14px*/; font-family: 'Source Sans Pro', sans-serif;}
+[role="complementary"] {font-size: 87.5% /*14px*/; }
 
 @media only screen and (min-width: 45em) {
 body {max-width:58.75em /*940px*/;}	
@@ -36,159 +40,141 @@ body {max-width:58.75em /*940px*/;}
 
 </style>
 </head>
+
+
+
 <body>
-
-
-  <header role="banner">
-	  
-	 <h1>Donny Truong</h1>
-	 <section class="contact">
-  <ul>
-      <li>Web: <a href="https://www.visualgui.com">visualgui.com</a></li>
-  <li>Phone: <a href="tel:8453372187">845-337-2187</a></li>
-  <li>Email: <a href="mailto:donny@visualgui.com">donny@visualgui.com</a></li>
-</ul>
-	 </section>
+	<header role="banner">
+	  <h1>Donny Truong</h1>
+	  	<section class="contact">
+	  		<ul>
+	  			<li>Web: <a href="https://www.visualgui.com">visualgui.com</a></li>
+	  			<li>Phone: <a href="tel:8453372187">845-337-2187</a></li>
+	  			<li>Email: <a href="mailto:donny@visualgui.com">donny@visualgui.com</a></li>
+			</ul>
+		</section>
  	</header>
  	
  	
- 	<div class="wrap">
-
-<main role="main">
-
-<h2>Experience</h2>
-
-
-<section>
-	<h3>Senior Web Services Developer</h3>
-	<h4><a href="http://www.law.gmu.edu">The George Mason University School of Law</a></h4>
-	<time>October 2011 – Present</time>
-	<div class="location">Arlington, VA</div>
+<div class="wrap">
+	<main role="main">
+		<header id="experience"><h2>Experience</h2></header>
 	
+			<section>
+				<h3>Senior Web Services Developer</h3>
+				<h4><a href="http://www.law.gmu.edu">The George Mason University School of Law</a></h4>
+				<time>October 2011 – Present</time>
+				<div class="location">Arlington, VA</div>
+				<ul>
+					<li>In charge of the Law School’s user experience design, front-end development, content management system, and server administration.</li>
+					<li>Lead the complete redesign of the Law School’s web presence: rewrite HTML, CSS, and JavaScript to improve performance and create responsive layout to provide an optimal experience across multiple devices.</li>
+					<li>Implement and manage WordPress Multisite to provide faculty, students, and the Law School’s members an easy-to-use online platform.</li>
+					<li>Oversee system administration: update and secure Linux web servers.</li>
+				</ul>
+			</section>
 
-<ul>
-	<li>In charge of the Law School’s user experience design, front-end development, content management system, and server administration.</li>
-	<li>Lead the complete redesign of the Law School’s web presence: rewrite HTML, CSS, and JavaScript to improve performance and create responsive layout to provide an optimal experience across multiple devices.</li>
-	<li>Implement and manage WordPress Multisite to provide faculty, students, and the Law School’s members an easy-to-use online platform.</li>
-	<li>Oversee system administration: update and secure Linux web servers.</li>
-</ul>
-</section>
-
-
-
-
-
-<section>
-	<h3>Principal</h3>
-	<h4><a href="http://www.visualgui.com">Visualgui</a></h4>
-	<time>January 2004 – Present</time>
-	<div class="location">Fairfax, VA</div>
-	
-<ul>
-	<li>Offer full web solution: user experience design, content strategy, front-end development, and content management system implementation.</li>
-	<li>Work directly with clients from project kickoff to launch and maintain ongoing supports.</li>
-</ul>
-
-</section>
+			<section>
+				<h3>Principal</h3>
+				<h4><a href="http://www.visualgui.com">Visualgui</a></h4>
+				<time>January 2004 – Present</time>
+				<div class="location">Fairfax, VA</div>
+				<ul>
+					<li>Offer full web solution: user experience design, content strategy, front-end development, and content management system implementation.</li>
+					<li>Work directly with clients from project kickoff to launch and maintain ongoing supports.</li>
+				</ul>
+			</section>
 
 
-<section>
-	<h3>Senior Web Developer</h3>
-	<h4><a href="http://business.gwu.edu">The George Washington University School of Business</a></h4>
-	<time>January 2008 – October 2011</time>
-	<div class="location">Washington, DC</div>
-	
-<ul>
-	<li>In charged of the Business School’s user experience design, content strategy, front-end development, and unify web presence to ensure GW’s established brand.</il>
-	<li>Designed and published the responsive digital version of the school’s printed magazine.</li>
-	<li>Customized and managed WordPress as an easy-to-publish news system to integrate new media marketing efforts into the school’s overall strategy.</li>
-</ul>
-
-</section>
+			<section>
+				<h3>Senior Web Developer</h3>
+				<h4><a href="http://business.gwu.edu">The George Washington University School of Business</a></h4>
+				<time>January 2008 – October 2011</time>
+				<div class="location">Washington, DC</div>
+				<ul>
+					<li>In charged of the Business School’s user experience design, content strategy, front-end development, and unify web presence to ensure GW’s established brand.</il>
+					<li>Designed and published the responsive digital version of the school’s printed magazine.</li>
+					<li>Customized and managed WordPress as an easy-to-publish news system to integrate new media marketing efforts into the school’s overall strategy.</li>
+				</ul>
+			</section>
 
 
-<section>
-	<h3>Senior Web Designer</h3>
-	<h4><a href="http://www.vassar.edu">Vassar College</a></h4>
-	<time>August 2002 – January 2008</time>
-	<div class="location">Poughkeepsie, NY</div>
-	
-
-<ul>
-	<li>Designed and developed unique web experience to meet the specific needs of each academic department and its users.</li>
-	<li>Contributed in enhancing the online experience of Vassar’s established brand and collaborated with a team of talented designers and developers to maintain over 200 web sites.</li>
-</ul>
-
-</section>
-</main>
+			<section>
+				<h3>Senior Web Designer</h3>
+				<h4><a href="http://www.vassar.edu">Vassar College</a></h4>
+				<time>August 2002 – January 2008</time>
+				<div class="location">Poughkeepsie, NY</div>
+				<ul>
+					<li>Designed and developed unique web experience to meet the specific needs of each academic department and its users.</li>
+					<li>Contributed in enhancing the online experience of Vassar’s established brand and collaborated with a team of talented designers and developers to maintain over 200 web sites.</li>
+				</ul>
+			</section>
+	</main>
  	
 
-
-  
-  
-<aside role="complementary">
-	
-	
-	<h2>Publication</h2>
-	<section>
-		<ul>
-		<li><cite><a href="http://www.gmu.edu">Professional Web Typography</a></cite> (2015)</li>
-		<li><a href="http://visualgui.github.io/prowebtype/editorial/">“Web Typography: a Brief History”</a> (2014)</li>
-		<li><a href="http://visualgui.github.io/prowebtype/text-wrap/">“Designing With Miles”</a> (2013)</li>
-	</ul>
-	</section>
+	<aside role="complementary">
+		<header id="publication"><h2>Publication</h2></header>
+			<section>
+				<ul>
+					<li><cite><a href="http://www.gmu.edu">Professional Web Typography</a></cite> (2015)</li>
+					<li><a href="http://visualgui.github.io/prowebtype/editorial/">“Web Typography: A Brief History”</a> (2014)</li>
+					<li><a href="http://visualgui.github.io/prowebtype/text-wrap/">“Designing With Miles”</a> (2013)</li>
+				</ul>
+			</section>
 	
 	
 	
-	<h2>Academics</h2>
-
-<section>
-	<h3>Adjunct Professor</h3>
-	<h4><a href="http://www.soa.gmu.edu">George Mason University School of Arts</a></h4>
-	<time>August 2014 – Present</time>
-	<div class="location">Fairfax, VA</div>
-	
-<ul>
-<li>Teach courses in advanced web design and usability to upper undergraduate and graduate students.</li> 
-</ul>
-</section>
+		<header id="academics"><h2>Academics</h2></header>
+			<section>
+				<h3>Adjunct Professor</h3>
+				<h4><a href="http://www.soa.gmu.edu">The George Mason University School of Arts</a></h4>
+				<time>August 2014 – Present</time>
+				<div class="location">Fairfax, VA</div>
+				<ul>
+					<li>Teach courses in advanced web design and usability to upper undergraduate and graduate students.</li> 
+				</ul>
+			</section>
 
 
-<section>
-<h3>MA, Graphic Design</h3>
-<h4><a href="http://www.gmu.edu">George Mason University</a></h4>
-<time>August 2012 - December 2015</time>
-<div class="location">Fairfax, VA</div>
-</section>
+			<section>
+				<h3>MA, Graphic Design</h3>
+				<h4><a href="http://www.gmu.edu">The George Mason University</a></h4>
+				<time>August 2012 - December 2015</time>
+				<div class="location">Fairfax, VA</div>
+			</section>
 
-<section>
-<h3>BA, Digital Arts & Multimedia Design</h3>
-<h4><a href="http://www.lasalle.edu">La Salle University</a></h4>
-<time>August 1997 - June 2001</time>
-<div class="location">Philadelphia, PA</div>
-</section>
+			<section>
+				<h3>BA, Digital Arts & Multimedia Design</h3>
+				<h4><a href="http://www.lasalle.edu">La Salle University</a></h4>
+				<time>August 1997 - June 2001</time>
+				<div class="location">Philadelphia, PA</div>
+			</section>
 
 
 
 
-<h2>Skills</h2>
-<section>
-<ul>
-<li><em>Web Design:</em> web standards, accessibility, usability, typography & UX design</li>
-<li><em>Mobile:</em>  responsive web design, jQuery Mobile development & UI design</li>
-<li><em>Web Development:</em>  HTML, CSS, Sass, JavaScript, PHP, MySQL, WordPress & MODX</li>
-<li><em>Adobe:</em> Photoshop, Illustrator, InDesign & Flash</li>
-<li><em>Server Administration:</em>  Linux (Red Hat & CentOS), Apache & command lines</li>
-</ul>
-</section>
+		<header id="skills"><h2>Skills</h2></header>
+			<section>
+				<ul>
+					<li><em>Web Design:</em> web standards, accessibility, usability, typography & UX design</li>
+					<li><em>Mobile:</em>  responsive web design, jQuery Mobile development & UI design</li>
+					<li><em>Web Development:</em>  HTML, CSS, Sass, JavaScript, PHP, MySQL, WordPress & MODX</li>
+					<li><em>Adobe:</em> Photoshop, Illustrator, InDesign & Flash</li>
+					<li><em>Server Administration:</em>  Linux (Red Hat & CentOS), Apache & command lines</li>
+				</ul>
+			</section>
+	</aside>
+</div><!--/wrap-->
 
-  
-  
+<script>
+//Google Analytics
+   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-</aside>
-
- 	</div>
-
+  ga('create', 'UA-160735-1', 'auto');
+  ga('send', 'pageview');
+</script>
 
 </body>
 </html>
