--- a/resume/index.html
+++ b/resume/index.html
@@ -117,7 +117,7 @@ body {max-width:58.75em /*940px*/;}
 		<header id="publication"><h2>Publication</h2></header>
 			<section>
 				<ul>
-					<li><cite><a href="http://www.gmu.edu">Professional Web Typography</a></cite> (2015)</li>
+					<li><cite><a href="https://prowebtype.com/">Professional Web Typography</a></cite> (2015)</li>
 					<li><a href="http://visualgui.github.io/prowebtype/editorial/">“Web Typography: A Brief History”</a> (2014)</li>
 					<li><a href="http://visualgui.github.io/prowebtype/text-wrap/">“Designing With Miles”</a> (2013)</li>
 				</ul>
