--- a/resume/index.html
+++ b/resume/index.html
@@ -114,7 +114,7 @@ body {max-width:58.75em /*940px*/;}
  	
 
 	<aside role="complementary">
-		<header id="publication"><h2>Publication</h2></header>
+		<header id="publication"><h2>Publications</h2></header>
 			<section>
 				<ul>
 					<li><cite><a href="https://prowebtype.com/">Professional Web Typography</a></cite> (2015)</li>
