--- a/animating-type/expand-open.html
+++ b/animating-type/expand-open.html
@@ -6,7 +6,7 @@
         <title>Expand Open</title>  
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href='http://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
-		<!--<script src="../js/prefixfree.min.js"></script>-->
+		<script src="http://visualgui.github.io/prowebtype/css-demos/js/prefixfree.min.js"></script>
 		
 <style>
 		
