--- a/css-demos/flexbox/index.html
+++ b/css-demos/flexbox/index.html
@@ -7,7 +7,7 @@
        <meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href='http://fonts.googleapis.com/css?family=Sorts+Mill+Goudy:400,400italic|Roboto+Condensed:700,400' rel='stylesheet' type='text/css'>
 		<link href='../prism/prism.css' rel='stylesheet' type='text/css'>
-		<!--<script src="../js/prefixfree.min.js"></script>-->
+		<script src="http://visualgui.github.io/prowebtype/css-demos/js/prefixfree.min.js"></script>
 		
 		<style>
 		
