--- a/resume/index.html
+++ b/resume/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Donny Truong’s Resume</title>
 <meta name="author" content="donny truong" />
 <meta name="copyright" content="visualgui.com" />
