--- a/choosing-headings/index.html
+++ b/choosing-headings/index.html
@@ -3,7 +3,7 @@
     <head>      
         <meta charset="utf-8">    
         <title>Choosing Headings</title>  
-       <meta name="viewport" content="width=device-width">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href='http://fonts.googleapis.com/css?family=Lora:400,700,400italic|Oswald:700' rel='stylesheet' type='text/css'>
 		
 		<style>
