--- a/portfolio/about/index.html
+++ b/portfolio/about/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
 
 <title>Donny Truong: About</title>
-<meta name="viewport" content="width=device-width">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="author" content="Donny Truong"/>
 <meta name="copyright" content="visualgui.com"/>
 
