--- a/portfolio/work/index.html
+++ b/portfolio/work/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <title>Donny Truong: Work</title>
-<meta name="viewport" content="width=device-width">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
 <meta name="author" content="Donny Truong"/>
 <meta name="copyright" content="visualgui.com"/>
