--- a/setting-paragraphs/index.html
+++ b/setting-paragraphs/index.html
@@ -3,7 +3,7 @@
     <head>      
         <meta charset="utf-8">    
         <title>Setting Paragraphs</title>  
-       <meta name="viewport" content="width=device-width">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href='http://fonts.googleapis.com/css?family=Lora:400,700,400italic' rel='stylesheet' type='text/css'>
 		
 		<style>
