--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,56 +1,79 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en-US">
-<head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>Donny Truong: Home</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="author" content="Donny Truong"/>
-<meta name="copyright" content="visualgui.com"/>
-<link href='http://fonts.googleapis.com/css?family=Raleway:300,900' rel='stylesheet' type='text/css'>
-<link href='style.css' rel='stylesheet' type='text/css'>
-</head>
+	<head>
+		<meta charset="utf-8">
+		<title>Donny Truong: Home</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		
+		<script type="text/javascript">
+  WebFontConfig = {
+    google: { families: [ 'Raleway:300,900:latin' ] }
+  };
+  (function() {
+    var wf = document.createElement('script');
+    wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
+      '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
+    wf.type = 'text/javascript';
+    wf.async = 'true';
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(wf, s);
+  })(); </script>
+  
+  <style>
+ 	 .wf-loading {  /* styles for fallback fonts */
+	 	 font-family: 'Helvetica Neue', Helvetica , Arial, sans-serif;
+	 	 }
+ 	 .wf-active {  /* styles for custom fonts */
+	 	 font-family: 'Raleway', 'Helvetica Neue', Helvetica , Arial, sans-serif;
+ 	 	 }
+ 	 .wf-inactive { /* use fallback fonts */
+	 	 font-family: 'Helvetica Neue', Helvetica , Arial, sans-serif;
+ 	 	 }
+  </style>
+		
+		<link href='style.css' rel='stylesheet' type='text/css'>
+	
+	</head>
+
+
 <body>
 
-
-<header role="banner" class="banner">
-<h1><a href="index.html">Donny Truong</a></h1>
+<header class="banner">
+	<h1><a href="index.html">Donny Truong</a></h1>
 </header>
 
 
-<nav role="navigation" class="main-nav">
-<ul>
-<li class="active"><a href="index.html">Home</a></li>
-<li><a href="work/index.html">Work</a></li>
-<li><a href="about/index.html">About</a></li>
-</ul>
+<nav class="main-nav">
+	<ul>
+		<li class="active"><a href="index.html">Home</a></li>
+		<li><a href="work/index.html">Work</a></li>
+		<li><a href="about/index.html">About</a></li>
+	</ul>
 </nav>
 
 
-<main role="main" class="main-content">
-
-<h2>Hi, I am <a href="about/index.html">Donny</a>, a web designer with a passion for typography.</h2>
-<h3><a href="https://www.youtube.com/v/9txhmy00OtA?rel=0;autoplay=1">Find out why I love the web.</a></h3>
-
-
+<main class="main-content">
+	<h2>Hi, I am <a href="about/index.html">Donny</a>, a web designer with a passion for typography.</h2>
+	<h3><a href="https://www.youtube.com/v/9txhmy00OtA?rel=0;autoplay=1">Find out why I love the web.</a></h3>
 </main>
 
 
 <div class="wrap">
-<aside role="complementary" class="more-info">
-<ul> 
-  <li> <a href="http://www.visualgui.com/resume">R&#233;sum&#233;</a></li>
-   <li><a href="http://twitter.com/visualgui">Twitter</a></li>
-   <li><a href="http://www.linkedin.com/in/donnytruong">LinkedIn</a></li>
-   <li><a href="http://www.pinterest.com/visualgui/">Pinterest</a></li>
+	<aside class="more-info">
+		<ul> 
+			<li><a href="http://www.visualgui.com/resume">R&#233;sum&#233;</a></li>
+			<li><a href="http://twitter.com/visualgui">Twitter</a></li>
+			<li><a href="http://www.linkedin.com/in/donnytruong">LinkedIn</a></li>
+			<li><a href="http://www.pinterest.com/visualgui/">Pinterest</a></li>
 </ul> 
 </aside> 
 
 
-<footer role="contentinfo" class="footer-info">
-Copyright &copy; <a href="http://www.visualgui.com/">Donny Truong</a>
+<footer class="footer-info">
+	Copyright &copy; <a href="http://www.visualgui.com/">Donny Truong</a>
 </footer>
-</div>
+
+</div><!--/wrap-->
 
 </body>
 </html>
