--- a/resume/index.html
+++ b/resume/index.html
@@ -6,6 +6,21 @@
 <title>Donny Truong’s Resume</title>
 <meta name="author" content="donny truong" />
 <meta name="copyright" content="visualgui.com" />
+
+<script type="text/javascript">
+  WebFontConfig = {
+    google: { families: [ 'Source+Sans+Pro:400,400italic:latin', 'Source+Serif+Pro:400,700:latin' ] }
+  };
+  (function() {
+    var wf = document.createElement('script');
+    wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
+      '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
+    wf.type = 'text/javascript';
+    wf.async = 'true';
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(wf, s);
+  })(); </script>
+
 <style>
 
 body, h1, h3 {font-family: 'Source Serif Pro', Georgia, 'Times New Roman', Times, serif;}
@@ -39,7 +54,7 @@ body {max-width:58.75em /*940px*/;}
 
 </style>
 
-<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic|Source+Serif+Pro:700,400' rel='stylesheet' type='text/css'>
+
 
 </head>
 
@@ -50,9 +65,9 @@ body {max-width:58.75em /*940px*/;}
 	  <h1>Donny Truong</h1>
 	  	<section class="contact">
 	  		<ul>
-	  			<li>Web: <a href="https://www.visualgui.com">visualgui.com</a></li>
+	  			<li>Web: <a href="https://ondesigns.net">ondesigns.net</a></li>
 	  			<li>Phone: <a href="tel:8453372187">845-337-2187</a></li>
-	  			<li>Email: <a href="mailto:donny@visualgui.com">donny@visualgui.com</a></li>
+	  			<li>Email: <a href="mailto:donnydigital@gmail.com">donnydigital@gmail.com</a></li>
 			</ul>
 		</section>
  	</header>
@@ -75,16 +90,7 @@ body {max-width:58.75em /*940px*/;}
 				</ul>
 			</section>
 
-			<section>
-				<h3>Principal</h3>
-				<h4><a href="http://www.visualgui.com">Visualgui</a></h4>
-				<time>January 2004 – Present</time>
-				<div class="location">Fairfax, VA</div>
-				<ul>
-					<li>Offer full web solution: user experience design, content strategy, front-end development, and content management system implementation.</li>
-					<li>Work directly with clients from project kickoff to launch and maintain ongoing supports.</li>
-				</ul>
-			</section>
+		
 
 
 			<section>
