--- a/resume/index.html
+++ b/resume/index.html
@@ -65,9 +65,9 @@ body {max-width:58.75em /*940px*/;}
 	  <h1>Donny Truong</h1>
 	  	<section class="contact">
 	  		<ul>
-	  			<li>Web: <a href="https://ondesigns.net">ondesigns.net</a></li>
+	  			<li>Web: <a href="https://www.visualgui.com/">visualgui.com</a></li>
 	  			<li>Phone: <a href="tel:8453372187">845-337-2187</a></li>
-	  			<li>Email: <a href="mailto:donnydigital@gmail.com">donnydigital@gmail.com</a></li>
+	  			<li>Email: <a href="mailto:donny@visualgui.com">donny@visualgui.com</a></li>
 			</ul>
 		</section>
  	</header>
