--- a/resume/index.html
+++ b/resume/index.html
@@ -123,9 +123,9 @@ body {max-width:58.75em /*940px*/;}
 		<header id="publication"><h2>Publications</h2></header>
 			<section>
 				<ul>
+					<li><cite><a href="https://vietnamesetypography.com/">Vietnamese Typography</a></cite> (2016)</li>
 					<li><cite><a href="https://prowebtype.com/">Professional Web Typography</a></cite> (2015)</li>
-					<li><a href="http://visualgui.github.io/prowebtype/editorial/">“Web Typography: A Brief History”</a> (2014)</li>
-					<li><a href="http://visualgui.github.io/prowebtype/text-wrap/">“Designing With Miles”</a> (2013)</li>
+					
 				</ul>
 			</section>
 	
@@ -173,16 +173,7 @@ body {max-width:58.75em /*940px*/;}
 	</aside>
 </div><!--/wrap-->
 
-<script>
-//Google Analytics
-   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-160735-1', 'auto');
-  ga('send', 'pageview');
-</script>
 
 </body>
 </html>
