--- a/choosing-headings/index.html
+++ b/choosing-headings/index.html
@@ -17,7 +17,7 @@
 				color:#444;			
 			}
 			
-		h1, h2, h3, h4, h5, h6 {font-family: 'Oswald' sans-serif; line-height: 1.1; margin: .8em 0 .3em 0;}
+		h1, h2, h3, h4, h5, h6 {font-family: 'Oswald', sans-serif; line-height: 1.1; margin: .8em 0 .3em 0;}
 				
 		h1 {font-size: 3.125em;}
 		h2 {font-size: 2.618em;}
